# Spectral_Unmixing

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: spectral_unmixing_tests.yml
docs/: requirements.txt
docs/source/: api.rst  changelog.md  conf.py  contributing.rst  index.rst  installation.rst  overview.rst  usage.rst  usage_example_datasets.rst  usage_filter_and_register_stack.rst  usage_functionality_overview.rst  usage_unmix_bidirectional_example.rst  usage_unmix_example.rst  usage_unmix_full_tzcyx_synthetic_example.rst  usage_unmix_picasso_2color_example.rst  usage_unmix_picasso_3color_example.rst  usage_unmix_picasso_5color_example.rst
example_data/Gockel_Nieves_Rivera_2026/: README.md
example_data/PICASSO_examples/: README.md
example_data/example_data/Gockel_Nieves_Rivera_2026/: README.md
example_data/example_data/PICASSO_examples/: README.md
example_data/example_data/synthetic_data/: README.md
example_data/synthetic_data/: README.md
spectral_unmixing/: __init__.py  __main__.py  cli.py  estimation.py  filters.py  io.py  picasso_impl.py  publication.py  registration.py  unmixing.py  viewer.py
tests/: test_estimation.py  test_filters.py  test_intra_stack_registration.py  test_io.py  test_publication.py  test_registration.py  test_unmixing.py  test_viewer.py
user_scripts/: filter_and_project_stack.py  filter_and_register_stack.py  fine_filter_and_register_stack.py  generate_synthetic_bleedthrough_stack.py  make_publication_render.py  register_stack.py  unmix_bidirectional_example.py  unmix_ch0_from_ch1_interactive.py  unmix_example.py  unmix_full_TZCYX_synthetic_example.py  unmix_microglia_example_private.py  unmix_picasso_2color_example.py  unmix_picasso_3color_example.py  unmix_picasso_5color_example.py  unmix_picasso_example.py
