[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-unmixing"
version = "0.0.4"
description = "Spectral bleed-through correction utilities for TZCYX microscopy stacks."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Fabrizio Musacchio" }
]
keywords = ["microscopy", "spectral unmixing", "ome-tiff", "omio", "image analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "numpy>=2.0",
  "omio-microscopy>=0.2.2",
  "pystackreg>=0.2.8",
  "scikit-image>=0.26.0",
  "scipy>=1.12",
  "ipykernel",
]


[project.scripts]
spectral-unmix = "spectral_unmixing.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spectral_unmixing*"]

[tool.setuptools.package-data]
spectral_unmixing = ["py.typed"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx>=8.0",
  "sphinx-rtd-theme",
  "myst-parser",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
]


[project.urls]
Homepage = "https://github.com/FabrizioMusacchio/Spectral_Unmixing"
Repository = "https://github.com/FabrizioMusacchio/Spectral_Unmixing"
Issues = "https://github.com/FabrizioMusacchio/Spectral_Unmixing/issues"
Changelog = "https://github.com/FabrizioMusacchio/Spectral_Unmixing/blob/main/CHANGELOG.md"


[tool.setuptools]
include-package-data = true


[tool.flit.sdist]
exclude = [
  "docs/source/_static",
  "user_scripts/figures",
]

[tool.pytest.ini_options]
addopts = "-ra -p no:napari -p no:napari-plugin-engine -p no:npe2"
testpaths = ["tests"]
filterwarnings = [
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.coverage.run]
branch = true
relative_files = true
include = ["spectral_unmixing/*"]
